Fix autocomplete suggestions getting cut off

--- a/src/index.css
+++ b/src/index.css
@@ -97,7 +97,7 @@
     @apply outline-none border-2 border-neutral-100 focus:border-neutral-300 h-8 bg-[#3fb66b] rounded text-neutral-100 text-lg text-center placeholder:text-center placeholder:text-green-100 placeholder:text-lg w-full
   }
   .autocompletediv {
-    @apply absolute left-0 top-full right-0 z-50 flex flex-col items-center justify-center max-h-48 w-full overflow-y-auto scroll-smooth divide-x-2 rounded
+    @apply absolute left-0 top-full right-0 z-50 flex-col items-center justify-center max-h-48 w-full overflow-y-auto scroll-smooth divide-x-2 rounded
   }
   .autocomplete {
     @apply bg-[#1c6337] text-base w-full h-8 border-[1.5px] shadow-md border-green-900 flex items-center justify-center text-neutral-100 max-h-[35%] select-none 
@@ -110,8 +110,8 @@
 }
 
 ::-webkit-scrollbar {
-  @apply bg-green-600
+  @apply bg-green-600 rounded-sm
 }
 ::-webkit-scrollbar-thumb {
-  @apply bg-green-700
+  @apply bg-green-700 rounded-sm
 }
